Playing with nats and hgelm
